5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4469/executions/1712_2506.log
== SUBMITION (2019-05-11 22:25:34) 
-- CODE:
qt = int(input())
pt = float(input())
qv = int(input())

cqt = qt
cqt2 = qt
cqv = qv
t = 0

while(cqt < 12000 and cqt2 > 0):
	cqt = cqt + ((cqt * pt) / 100)
	cqt2 = cqt2 - ((cqv * pv) / 100)
	t = t + 1
	
if(cqt >= 12000):
	print("LIMITE")
elif(cqt2 <= 0):
	print("EXTINCAO")

print(t)
-- EXECUTION TIME:
0.167856
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1712/2506/main.py", line 12, in <module>
    cqt2 = cqt2 - ((cqv * pv) / 100)
NameError: name 'pv' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 22:28:53) 
-- CODE:
qt = int(input())
pt = float(input())
qv = int(input())

cqt = qt
cqt2 = qt
cqv = qv
t = 0

while(cqt < 12000 and cqt2 > 0):
	cqt = cqt + ((cqt * pt) / 100)
	cqt2 = cqt2 - ((cqv * pv) / 100)
	t = t + 1
	
if(cqt >= 12000):
	print("LIMITE")
elif(cqt2 <= 0):
	print("EXTINCAO")

print(t)
-- EXECUTION TIME:
0.184156
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1712/2506/main.py", line 12, in <module>
    cqt2 = cqt2 - ((cqv * pv) / 100)
NameError: name 'pv' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 22:31:47) 
-- CODE:
qt = int(input())
pt = float(input())
qv = int(input())

cqt = qt
cqt2 = qt
cqv = qv
t = 0

while(cqt < 12000 and cqt2 > 0):
	cqt = cqt + ((cqt * pt) / 100)
	cqt2 = cqt2 - ((cqv * pv) / 100)
	t = t + 1
	
if(cqt >= 12000):
	print("LIMITE")
elif(cqt2 <= 0):
	print("EXTINCAO")

print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    cqt2 = cqt2 - ((cqv * pv) / 100)
NameError: name 'pv' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 22:32:44) 
-- CODE:
qt = int(input())
pt = float(input())
qv = int(input())

cqt = qt
cqt2 = qt
cqv = qv
t = 0

while(cqt < 12000 and cqt2 > 0):
	cqt = cqt + ((cqt * pt) / 100)
	cqt2 = cqt2 - ((cqv * pt) / 100)
	t = t + 1
	
if(cqt >= 12000):
	print("LIMITE")
elif(cqt2 <= 0):
	print("EXTINCAO")

print(t)
-- EXECUTION TIME:
0.14668
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
LIMITE
40
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
10
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 22:32:47) 
-- CODE:
qt = int(input())
pt = float(input())
qv = int(input())

cqt = qt
cqt2 = qt
cqv = qv
t = 0

while(cqt < 12000 and cqt2 > 0):
	cqt = cqt + ((cqt * pt) / 100)
	cqt2 = cqt2 - ((cqv * pt) / 100)
	t = t + 1
	
if(cqt >= 12000):
	print("LIMITE")
elif(cqt2 <= 0):
	print("EXTINCAO")

print(t)
-- OUTPUT:
LIMITE
40
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 22:39:27) 
-- CODE:
qt = int(input())
pt = float(input())
qv = int(input())

cqt = qt
cqt2 = qt
t = 0

while(cqt < 12000 and cqt2 > 0):
	cqt = cqt + ((cqt * pt) / 100)
	cqt2 = cqt2 - qv
	t = t + 1
	
if(cqt >= 12000):
	print("LIMITE")
elif(cqt2 <= 0):
	print("EXTINCAO")

print(t)
-- EXECUTION TIME:
0.207227
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINCAO
10
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
10
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 22:43:39) 
-- CODE:
qt = int(input())
pt = float(input())
qv = int(input())

t = 0

while(qt < 12000 and qt > 0):
	qt = (qt + ((qt * pt) / 100)) - qv
	t = t + 1
	
if(qt >= 12000):
	print("LIMITE")
elif(qt <= 0):
	print("EXTINCAO")

print(t)
-- EXECUTION TIME:
0.171453
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINCAO
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 22:51:10) 
-- CODE:
qt = int(input())
pt = float(input())
qv = int(input())

t = 0

while(qt < 12000 and qt > 0):
	qt = qt + ((qt * pt) / 100) - qv
	t = t + 1
	
if(qt >= 12000):
	print("LIMITE")
elif(qt <= 0):
	print("EXTINCAO")

print(t)
-- EXECUTION TIME:
0.197448
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINCAO
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
